Revision history for Perl extension File::ExtAttr.

1.00 2006-08-28
    - (richdawe) Add support for Solaris 10.
    - (richdawe) Add support for File::ExtAttr::Tie on *BSD.
    - (richdawe) API change: Namespace and the create/replace flag
                 are now passed via a hash. This breaks API compatibility.
                 There should be no further API changes.
                 NOTE: This has not been tested on Mac OS X.

0.05 2006-05-27
    - (richdawe) Add support for FreeBSD 6.0. This may also work
                 with NetBSD >= 4.0 and OpenBSD > 3.8.
    - (richdawe) All *fattr functions now take some optional flags.
    - (richdawe) Add File::ExtAttr::Tie for tied access to extattrs;
                 thanks to David Leadbeater!

0.04 2006-01-20
    - (richdawe) Add Mac OS X support; thanks to Jonathan Rockway!
    - (richdawe) Add a check to Makefile.PL for libattr's headers on Linux.
    - (richdawe) Requirement on Perl 5.8.5 is spurious; remove it.

0.03 2006-01-01
    - (richdawe) Rename to File::ExtAttr from Linux::xattr
    - (richdawe) Bugfix: XATTR_* were not found correctly in XS.
    - (richdawe) Bugfix: Off-by-one buffer overflow in XS for getfattr().
    - (richdawe) Split the tests up, to make them more granular.
    - (richdawe) Final parameter of setfattr() is now optional.
    - (richdawe) Support specifying file using an IO::Handle.

0.02 2005-11-15
    - (kg) changing to use system functions instead of compatability functions
    - (kg) fixing strlen stuff in get and set
    - (kg) exporting constants

0.01  Wed Nov  9 08:57:42 2005
	- original version; created by h2xs 1.23 with options
		-O -n Linux::xattr Linux-xattr/mylib/xattrlib.h